Fix: Improve contrast.
Checked w/contrast checker.

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -81,6 +81,6 @@
     background-color: blue;
   }
   .green {
-    background-color: #73bd05;
+    background-color: #4C9029;
   }
 }
